# SynthPriv

./: .env.example  .pre-commit-config.yaml  Dockerfile.cpu  Dockerfile.gpu  PROJECT_TREE.txt  README.md  USAGE.md  VS_CODE_GUIDE.md  app.py  pyproject.toml  requirements.txt  testdata.csv
.github/workflows/: ci.yml
synthpriv/: catalog.py  cli.py  epsilon_allocator.py  eval.py  trainer.py
tests/: test_trainer.py
